--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@
   <!-- ? MAT ICON-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?familly=Material+Icons">
 
+  <!--? BOOTSTRAP ICON LINK-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.1/font/bootstrap-icons.min.css" 
+  integrity="sha512-oAvZuuYVzkcTc2dH5z1ZJup5OmSQ000qlfRvuoTTiyTBjwX1faoyearj8KdMq0LgsBTHMrRuMek7s+CxF8yE+w=="
+   crossorigin="anonymous" referrerpolicy="no-referrer" />
+   
   <!-- ? BOOTSTRAP SCRIPT-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
   integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
